# autogitsync

./: LICENSE  README.md  pyproject.toml
src/autogitsync/: __init__.py
